; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_names.c_EVP_add_cipher.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_names.c_EVP_add_cipher.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@OBJ_NAME_TYPE_CIPHER_METH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EVP_add_cipher(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = icmp eq %struct.TYPE_3__* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %30

8:                                                ; preds = %1
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @OBJ_nid2sn(i32 %11)
  %13 = load i32, i32* @OBJ_NAME_TYPE_CIPHER_METH, align 4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %15 = bitcast %struct.TYPE_3__* %14 to i8*
  %16 = call i32 @OBJ_NAME_add(i32 %12, i32 %13, i8* %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %30

20:                                               ; preds = %8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @OBJ_nid2ln(i32 %23)
  %25 = load i32, i32* @OBJ_NAME_TYPE_CIPHER_METH, align 4
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = bitcast %struct.TYPE_3__* %26 to i8*
  %28 = call i32 @OBJ_NAME_add(i32 %24, i32 %25, i8* %27)
  store i32 %28, i32* %4, align 4
  %29 = load i32, i32* %4, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %20, %19, %7
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @OBJ_NAME_add(i32, i32, i8*) #1

declare dso_local i32 @OBJ_nid2sn(i32) #1

declare dso_local i32 @OBJ_nid2ln(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
